Many upgrades but tests are not passing